fix(layout): update spacing calculations in CSS and improve HTML structure

--- a/public/fountustic/fountustic-theme-default.css
+++ b/public/fountustic/fountustic-theme-default.css
@@ -167,7 +167,7 @@
     --highlight-bg: #eff6ff;
     --highlight-text-color: #1d4ed8;
 
-    --space-base: 0.25;
+    --spacing: 0.25;
 
     color-scheme: light;
 }
